[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameSrc/Universal/GUI/Valuables/Browser.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/ThemeSpanishViolet.tres" type="Theme" id=2]
[ext_resource path="res://Assets/CustomeStyle/RTL/Rest_Frame_Title.tres" type="DynamicFont" id=3]
[ext_resource path="res://GameSrc/Universal/GUI/Valuables/Type.gd" type="Script" id=4]
[ext_resource path="res://GameSrc/Universal/GUI/Valuables/Quality.gd" type="Script" id=5]
[ext_resource path="res://GameSrc/Universal/GUI/Valuables/SubType.gd" type="Script" id=6]
[ext_resource path="res://Assets/DynamicFonts/Text_Default.tres" type="DynamicFont" id=8]

[node name="Valuables_Browser" type="Control"]
margin_left = 64.0
margin_top = -352.0
margin_right = 64.0
margin_bottom = -352.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Window" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame2" type="Panel" parent="Window"]
margin_left = 768.0
margin_top = 712.0
margin_right = 1032.0
margin_bottom = 813.0

[node name="Frame" type="Panel" parent="Window"]
margin_left = 768.0
margin_top = 776.0
margin_right = 1640.0
margin_bottom = 944.0

[node name="Title" type="RichTextLabel" parent="Window"]
margin_left = 768.0
margin_top = 720.0
margin_right = 1032.0
margin_bottom = 776.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Valuables"
text = "Valuables"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter" type="Control" parent="."]
margin_left = 768.0
margin_top = 726.0
margin_right = 984.0
margin_bottom = 904.0

[node name="Type" type="OptionButton" parent="Filter"]
margin_left = 104.0
margin_top = 82.0
margin_right = 214.0
margin_bottom = 106.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Filter/Type"]
margin_left = -96.0
margin_right = -16.0
margin_bottom = 34.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]Type"
text = "Type"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubType" type="OptionButton" parent="Filter"]
margin_left = 104.0
margin_top = 124.0
margin_right = 214.0
margin_bottom = 148.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Filter/SubType"]
margin_left = -96.0
margin_top = -2.0
margin_right = -16.0
margin_bottom = 32.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]SubType"
text = "SubType"

[node name="Quality" type="OptionButton" parent="Filter"]
margin_left = 104.0
margin_top = 168.0
margin_right = 214.0
margin_bottom = 192.0
script = ExtResource( 5 )

[node name="Text" type="RichTextLabel" parent="Filter/Quality"]
margin_left = -96.0
margin_top = -2.0
margin_right = -16.0
margin_bottom = 32.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]Quality"
text = "Quality"

[node name="All KitParts" type="Control" parent="."]
margin_left = 960.0
margin_top = 861.0
margin_right = 1000.0
margin_bottom = 901.0

[node name="ScrollContainer" type="ScrollContainer" parent="All KitParts"]
margin_left = 24.0
margin_top = -71.0
margin_right = 672.0
margin_bottom = 75.0

[node name="VBoxContainer" type="VBoxContainer" parent="All KitParts/ScrollContainer"]
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="Filter/Type" to="." method="_on_filter_pressed"]
[connection signal="item_selected" from="Filter/Type" to="Filter/SubType" method="_on_type_selected"]
[connection signal="item_selected" from="Filter/SubType" to="." method="_on_filter_pressed"]
[connection signal="item_selected" from="Filter/Quality" to="." method="_on_filter_pressed"]
